white spaces fixed

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ h1 {
   text-align: center;
   font-size: 2.5rem;
   font-family: 'Dancing Script', cursive;
+  margin: 0;
 }
 
 header {
@@ -71,6 +72,7 @@ nav ol {
   overflow: hidden;
   padding: 0;
   width: 100%;
+  margin: 0;
 }
 
 a:hover {
